# cool-website

./: .gitignore  README.md  app.py  config.yaml  requirements.txt  script.py
.devcontainer/: devcontainer.json
assets/: styles.css
components/: about.py  header.py
pages/: 1_📝_Blog.py  2_📄_CV.py
st_website/: README.md  pyproject.toml
st_website/assets/: styles.css
st_website/components/: __init__.py  education.py  experience.py
