[project]
name = "celine-vural-website"
version = "1.0.0"
description = "Personal CV website with green lofi retro aesthetic"
authors = [
    {name = "Celine Vural"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.29.0",
    "pyyaml>=6.0.1",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100
